--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3",
     "@resume-platform/schema": "workspace:*",
-    "@resume-platform/ui": "workspace:*"
+    "@resume-platform/ui": "workspace:*",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "msw": "^2.11.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
