--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "description": "The foundational monorepo for the next-gen resume platform.",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.4.5"
   },
   "engines": {
